# image-captioning

./: .dockerignore  .env.production  .gitignore  Dockerfile  README.md  build.sh  deploy.sh  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  fastapi.Dockerfile  inventory.ini  load_and_train.sh  next.Dockerfile  playbook.yml  pyproject.toml  ssh.sh  start.sh
client/: package-lock.json  package.json  tailwind.config.ts
client/src/app/: globals.css  page.tsx
client/src/app/api/generate-recipe/: route.ts
client/src/app/components/: UploadForm.tsx
client/src/schema/: recipe.ts
data/: .gitignore
src/: dataset.py  inference.py  server.py
src/func/: preprocessing.py
src/models/: attention.py  decoder.py  decoder_layer.py  image_captioner.py  text_encoder.py
src/util/: artifacts.py  chroma.py  constants.py  debug.py  devices.py  typecheck.py
src/web/static/: styles.css
src/web/templates/: index.j2
