[project]
name = "mlsearch"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "CNimmo16", email = "48329714+CNimmo16@users.noreply.github.com"},
]
readme = "README.md"
requires-python = "==3.9.*"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "torch (>=2.6.0,<3.0.0)",
    "nltk (>=3.9.1,<4.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "wandb (>=0.19.5,<0.20.0)",
    "swifter (>=1.4.0,<2.0.0)",
    "fastapi (>=0.115.8,<0.116.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "datasets (>=3.2.0,<4.0.0)",
    "gensim>=4.3.3",
    "chromadb>=0.6.3",
    "torchvision>=0.21.0",
    "matplotlib>=3.9.4",
    "seaborn>=0.13.2",
    "transformers>=4.48.3",
    "scikit-learn>=1.6.1",
    "kagglehub>=0.3.8",
]
license = {text = "MIT"}

[tool.pdm]
distribution = true
package-dir = "src"

[tool.pdm.scripts]
load-data = {call = "bin.load_data:main"}
train = {call = "bin.train:main"}
eval = {call = "bin.eval:main"}
deploy = "./deploy.sh"
ssh = "./ssh.sh"
build = "./build.sh"
